2011-06-01  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] run-launcher should run MiniBrowser in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=61858

        * Scripts/run-launcher: Check whether -2 command line option has
        been passed and run MiniBrowser instead of GtkLauncher.

2011-05-31  Hao Zheng  <zhenghao@chromium.org>

        Reviewed by Dirk Pranke.

        Fix exception in verbose printing mode.
        https://bugs.webkit.org/show_bug.cgi?id=61723

        * Scripts/webkitpy/layout_tests/layout_package/printing.py:

2011-05-31  Yong Li  <yoli@rim.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=54807
        We have been assuming plain bitfields (like "int a : 31") are always signed integers.
        However some compilers can treat them as unsigned. For example, RVCT 4.0 states plain
        bitfields (declared without either signed or unsigned qualifiers) are treats as unsigned.
        http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0348c/Babjddhe.html
        Although we can use "--signed-bitfields" flag to make RVCT 4.0 behave as most other compilers,
        always using "signed"/"unsigned" qualifier to declare integral type bitfields is still a good
        rule we should have in order to make our code independent from compilers and compiler flags.

        * Scripts/webkitpy/style/checkers/cpp.py:

2011-05-31  Hironori Bono  <hbono@chromium.org>

        Reviewed by Eric Seidel.

        Add a JavaScript function layoutTestController.setTextDirection().
        https://bugs.webkit.org/show_bug.cgi?id=50952

        This change adds a new JavaScript function setTextDirection() to the
        LayoutTestController class of Safari and Chrome to write layout tests
        that changes the text direction of an editable element.

        * DumpRenderTree/LayoutTestController.cpp:
        (setTextDirectionCallback):